[package]
name = "matrix-rest-api"
version = "0.1.0"
authors = ["Wes Widner <wes@manwe.io>"]
edition = "2018"

[lib]
name = "matrix_rest_api"
path = "src/lib.rs"

[[bin]]
name = "matrix_rest_api_server"
path = "src/bin/api/main.rs"

[[bin]]
name = "matrix_rest_cli"
path = "src/bin/cli/main.rs"

[dependencies]
actix-web = "4.0.0-beta"
env_logger = "0.9.0"
futures = "0.3.16"
log = "0.4.14"
matrix-protos-rust = "0.1.0"
protobuf = "2.25.1"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = { version = "1.0.66" }
serde_with = { version = "1.9.4" }
tokio = { version = "1.10.0", features = ["full"] }
zmq = "0.9"
